--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,59 +1,190 @@
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Poppins:wght@200;400&family=Titan+One&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --shadow-color: 43deg 10% 39%;
+}
+
+$shadow-elevation-low:
+  0px 1px 0.8px hsl(var(--shadow-color) / 1),
+  0px 1.4px 1px -2.5px hsl(var(--shadow-color) / 0.69),
+  0px 4.8px 3.6px -5px hsl(var(--shadow-color) / 0.35);
+
+$shadow-elevation-medium:
+  0px 1px 0.8px hsl(var(--shadow-color) / 1),
+  0px 1.8px 1.4px -1.7px hsl(var(--shadow-color) / 0.82),
+  -0.1px 7.8px 5.9px -3.3px hsl(var(--shadow-color) / 0.55),
+  -0.2px 24.2px 18.2px -5px hsl(var(--shadow-color) / 0.27);
+
+$shadow-elevation-high:
+  0px 1px 0.8px hsl(var(--shadow-color) / 1),
+  0px 1.6px 1.2px -0.8px hsl(var(--shadow-color) / 0.99),
+  0px 6.3px 4.7px -1.7px hsl(var(--shadow-color) / 0.83),
+  -0.1px 19px 14.3px -2.5px hsl(var(--shadow-color) / 0.66),
+  -0.3px 43.6px 32.7px -3.3px hsl(var(--shadow-color) / 0.5),
+  -0.6px 84.3px 63.2px -4.2px hsl(var(--shadow-color) / 0.33),
+  -1.1px 144.9px 108.7px -5px hsl(var(--shadow-color) / 0.17);
+
+$headline: "Monoton", cursive;
+$sub-headline: "Titan One", cursive;
+$text: "Poppins", sans-serif;
+
+$purple: oklch(70% 0.5 340);
+$turquoise: oklch(90% 0.3 200);
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
-.archway {
+html {
+  background-color: #e7e3d9;
+}
+
+// hero page in home
+.hero {
+  position: relative;
+  width: 100vw;
+  height: 200vh;
+
+  &__banner {
+    width: 100vw;
+    margin: 4rem 0 0 0;
+    padding: 1rem 0;
+    text-align: center;
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    font-family: $headline;
+    font-size: 5rem;
+    word-spacing: 1rem;
+    color: black;
+
+    &__span {
+      display: inline-block;
+      width: 35%;
+      text-transform: uppercase;
+    }
+  }
+
+  &__container {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    place-content: center;
+
+    &__image {
+      width: 400px;
+      height: 600px;
+      margin: 0 auto;
+      padding: 0.8rem;
+      border: 4px solid black;
+      border-top-left-radius: 200px 200px;
+      border-top-right-radius: 200px 200px;
+      box-shadow: $shadow-elevation-high;
+      cursor: pointer;
+      transition:
+        border-radius 0.2s ease-in-out,
+        width 0.2s ease-in-out,
+        height 0.2s ease-in-out;
+
+      @media (prefers-reduced-motion) {
+        transition:
+          border-radius 0s,
+          width 0s,
+          height 0s;
+      }
+    }
+  }
+}
+
+// home page
+.landing {
   width: 100vw;
   height: 100vh;
-  display: grid;
-  place-content: center;
-  background-color: #ffecaf;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-
-  &__content {
-    width: 600px;
-    height: 600px;
-    border: 1px solid black;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    outline: 1px solid black;
-    outline-offset: 5px;
-    cursor: pointer;
-    object-fit: "cover";
-  }
-}
-
-.mainPage {
-  position: relative;
-  top: 100vh;
-  width: 100%;
-  height: 100vh;
   visibility: hidden;
-  border: 1px solid white;
-  padding: 4rem;
-  &__image {
-    width: 50%;
-    height: 100%;
+  opacity: 0;
+  position: relative;
+  transition:
+    opacity 0.2s ease-in-out,
+    visibility 0.2s ease-in-out;
+  @media (prefers-reduced-motion) {
+    transition:
+      opacity 0s,
+      visibility 0s;
+  }
+
+  &__textContainer {
+    position: absolute;
+    top: 20rem;
+    left: 10rem;
+  }
+
+  &__headline {
+    width: 75%;
+    padding-bottom: 1rem;
+    border-bottom-width: 5px;
+    border-style: solid;
+    border-image: linear-gradient(to left, $purple 0%, $turquoise 100%) 1;
+    font-family: $text;
+    font-size: 2.5rem;
+    background-image: linear-gradient(to top right in oklch, $purple 0%, $turquoise 100%);
+    background-clip: text;
+    color: transparent;
+  }
+
+  &__sub-headline {
+    width: 75%;
+    font-family: $sub-headline;
+    font-size: 6rem;
+    background-image: linear-gradient(to bottom right in oklch, $purple 0%, $turquoise 100%);
+    background-clip: text;
+    color: transparent;
+    text-transform: uppercase;
   }
 }
 
-.head {
-  color: white;
-  text-align: center;
-  font-size: 5rem;
-  transform: translateY(100vh);
-}
+.nav {
+  padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-p {
-  color: white;
+  &__list {
+    display: flex;
+    gap: 2rem;
+  }
+
+  &__link {
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    font-family: $text;
+    font-size: 1.5rem;
+    position: relative;
+    color: white;
+
+    &::before {
+      content: "";
+      width: 0;
+      height: 2px;
+      background: linear-gradient(to left in oklch, $purple 0%, $turquoise 100%);
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transition: width 0.2s ease-in-out;
+      @media (prefers-reduced-motion) {
+        width: 100%;
+        transition: width 0s;
+      }
+    }
+
+    &:hover {
+      &::before {
+        width: 100%;
+      }
+    }
+  }
 }
